# CarAI

./: CMakeLists.txt  DeepLearningCar.sln
DeepLearningCar/: DeepLearningCar.vcxproj  DeepLearningCar.vcxproj.filters  PropertySheet.props
data/: settings.ini
data/shaders/: simple_fs.glsl  simple_vs.glsl
ext/assimp-4.0.1/lib/: assimp-vc140-mt.exp  assimp-vc140-mt.lib
ext/bullet3-2.87/lib/: Bullet2FileLoader.lib  Bullet2FileLoader_Debug.lib  Bullet3Collision.lib  Bullet3Collision_Debug.lib  Bullet3Common.lib  Bullet3Common_Debug.lib  Bullet3Dynamics.lib  Bullet3Dynamics_Debug.lib  Bullet3Geometry.lib  Bullet3Geometry_Debug.lib  Bullet3OpenCL_clew.lib  BulletCollision.lib  BulletDynamics.lib  BulletInverseDynamics.lib  BulletInverseDynamics_Debug.lib  BulletSoftBody.lib  BulletSoftBody_Debug.lib  LinearMath.lib  LinearMath_Debug.lib
ext/glad/include/glad/: glad.h
ext/glad/lib/: glad64.lib
ext/glad/src/: glad.c
ext/glfw-3.2.1/lib/: glfw3.lib
ext/glm-0.9.9-a1/glm/detail/: dummy.cpp
src/: Application.cpp  Application.h  BulletInterface.cpp  BulletInterface.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  DeepLearningCarApp.cpp  DeepLearningCarApp.h  GLObjects.cpp  GLObjects.h  Renderer.cpp  Renderer.h  UserInputController.cpp  UserInputController.h  main.cpp
src/Simulation/: Evolution.cpp  Evolution.h  NeuralNetwork.cpp  NeuralNetwork.h  Simulation.cpp  Simulation.h  Vehicle.cpp  Vehicle.h
